[project]
name = "packman"
version = "20220421"
description = "A Cub Scouts Pack management platform built on Python and Django."
authors = [
    "John Lawrence <john@cjvn.net>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/Pack144/packman/"
repository = "https://github.com/Pack144/packman/"
documentation = "https://github.com/Pack144/packman/docs/"
keywords = ["bsa", "cub scout", "scouting"]

[tool.black]
line-length = 119
extend-exclude = "/migrations"

[tool.curlylint]
include = '\.(html|jinja)$'
exclude = '''
(
  /(
      \.eggs           # exclude a few common directories in the root of the project
    | \.git
    | \.venv
  )/
  | webpack-stats.html # also separately exclude a file named webpack-stats.html in the root of the project
)
'''

[tool.djlint]
blank_line_after_tag="load,extends,endblock"
ignore="H030,H031,T002,T003"
indent=2
max_line_length=120
profile="django"

[tool.curlylint.rules]
aria_role = true
django_forms_rendering = 'as_p'
image_alt = true
indent = 2
html_has_lang = ['en-US', '{{ LANGUAGE_CODE|default:"en-US" }}']
meta_viewport = true
no_autofocus = true
tabindex_no_positive = true

[tool.isort]
extend_skip = "migrations"
profile = "black"
known_django = "django"
known_first_party = "packman"
line_length = 119
sections = ['FUTURE', 'STDLIB', 'DJANGO', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

[tool.codereviewdoctor]
ignore = ["migrations"]
